kubernetes/media/radarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  ports:
    - port: 7878
      protocol: TCP
      targetPort: http
  selector:
    app: radarr
  sessionAffinity: ClientIP
  type: ClusterIP
