kubernetes/media/radarr/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: radarr-certificate
